[gd_scene load_steps=8 format=2]

[ext_resource path="res://game/ObjectPlacement.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/sprites/sign-post.png" type="Texture" id=2]
[ext_resource path="res://game/objects/SignPost.gd" type="Script" id=3]
[ext_resource path="res://hud/SignPostPopup.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 6 )

[sub_resource type="CircleShape2D" id=2]

[sub_resource type="CircleShape2D" id=3]
radius = 4.0

[node name="SignPost" type="StaticBody2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="ObjectPlacement" parent="." instance=ExtResource( 1 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ObjectPlacement"]
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 7 )
shape = SubResource( 3 )

[node name="SignPostPopup" parent="." instance=ExtResource( 4 )]
visible = true
margin_left = -47.0
margin_top = -79.0
margin_right = -47.0
margin_bottom = -79.0

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
